Force overflow-x hidden on html and body to prevent mobile scrolling

--- a/public/css/base/reset.css
+++ b/public/css/base/reset.css
@@ -7,17 +7,13 @@
     box-sizing: border-box;
 }
 
-html {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
+html,
 body {
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    position: relative;
 }
 
 body {
